--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     .muted{color:var(--muted)} .pill{background:#0e1533;border:1px solid rgba(255,255,255,.14);padding:6px 10px;border-radius:999px;color:#cfe0ff;font-weight:600;display:inline-flex;gap:8px;align-items:center}
     .list{display:grid;gap:10px}
     .q{background:#0f1738;border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:12px}
-    .ans{background:#0c1330;border:1px solid rgba(255,255,255,.08);padding:12px;border-radius:10px}
+    .ans{background:#0c1330;border:1px solid rgba(255,255,255,.12);padding:14px;border-radius:14px;min-height:120px;font-size:18px;line-height:1.3;color:#eaf0ff;white-space:normal;word-break:break-word;display:flex;align-items:center;justify-content:center;}
+    @media(max-width:640px){.ans{min-height:90px;font-size:16px}}
+    .ans.hidden{color:#ff7a7a;font-weight:800;}
+    .ans.revealed{background:#0f1a44;border-color:#6ea8ff;box-shadow:0 0 0 2px rgba(110,168,255,.18) inset;}
+    .ans:disabled{opacity:.85}
     .players{display:flex;flex-wrap:wrap;gap:8px}
     .player{background:#0e1737;border:1px solid rgba(255,255,255,.1);padding:8px 10px;border-radius:999px}
     .hr{height:1px;background:rgba(255,255,255,.08);margin:14px 0}
@@ -39,12 +43,73 @@
 
     <div class="grid">
       <!-- HOST PANEL -->
-      <div class="card">
+      <div class="card" id="hostCard">
         <div class="row" style="justify-content:space-between">
           <strong>Bảng điều khiển (Host)</strong>
           <span class="pill">Trạng thái: <span id="status">Chưa vào phòng</span></span>
         </div>
         <div class="hr"></div>
+        <div class="row">
+          <input id="roomId" placeholder="Mã phòng (ví dụ: ECO101)"/>
+          <button id="enterRoom">Vào phòng</button>
+          <button class="ghost" id="copyLink">Sao chép link</button>
+        </div>
+        <div class="row">
+          <input id="logoInput" placeholder="Dán URL logo lớp (PNG/JPG)"/>
+          <label class="muted">Màu chủ đạo:</label>
+          <input id="colorInput" type="color" value="#7aa2ff"/>
+          <button class="ghost" id="applyBrand">Áp dụng giao diện</button>
+        </div>
+
+        <div class="hr"></div>
+        <div class="row">
+          <input type="file" id="fileInput" accept=".csv,.json"/>
+          <button id="loadPairs" class="ghost">Tải cặp Q/A</button>
+          <label>Điểm mỗi cặp:</label><input id="memPts" type="number" value="5"/>
+          <label>Cột:</label><input id="memCols" type="number" value="4" min="2" max="8"/>
+          <button id="startRound">Bắt đầu ván</button>
+        </div>
+        <div id="queue" class="list"></div>
+
+        <div class="hr"></div>
+        <div>
+          <div class="row"><strong>Người chơi</strong> <span class="pill" id="playerCount">0</span>
+            <button class="ghost" id="exportCsv">Xuất điểm CSV</button>
+          </div>
+          <div class="players" id="players"></div>
+        </div>
+
+        <div class="hr"></div>
+        <div>
+          <div class="row"><strong>Bảng điểm</strong></div>
+          <div id="scoreboard" class="list"></div>
+        </div>
+      </div>
+
+      <!-- PLAYER PANEL -->
+      <div class="card" id="playerCard">
+        <strong>Người chơi – Lật thẻ</strong>
+        <div class="hr"></div>
+        <div class="row">
+          <input id="joinRoom" placeholder="Mã phòng" />
+          <input id="nickname" placeholder="Tên của bạn" />
+          <button id="joinBtn">Tham gia</button>
+        </div>
+        <div class="space"></div>
+        <div id="playerArea" style="display:none">
+          <div class="row" style="justify-content:space-between">
+            <span class="pill">Phòng: <span id="roomBadge">-</span></span>
+            <span class="pill">Bạn: <span id="me">-</span></span>
+            <span class="pill">Còn cặp: <span id="memLeft">--</span></span>
+          </div>
+          <div class="hr"></div>
+          <div id="board" style="display:grid;gap:12px"></div>
+          <div class="muted center" id="hint"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hr"></div></div>
         <div class="row">
           <input id="roomId" placeholder="Mã phòng (ví dụ: ECO101)"/>
           <button id="enterRoom">Vào phòng</button>
@@ -131,6 +196,16 @@
     const $ = (id)=>document.getElementById(id);
     let joinedRoomId=null, myId=null;
 
+    // ===== Route theo vai trò: ?role=host hoặc ?role=player =====
+    function qp(name){ const u=new URL(location.href); return u.searchParams.get(name); }
+    const role = (qp('role')||'').toLowerCase();
+    if(role==='host'){ document.getElementById('playerCard').style.display='none'; }
+    if(role==='player'){ document.getElementById('hostCard').style.display='none'; }
+    // gợi ý nhanh
+    const tip = document.createElement('div'); tip.className='muted'; tip.style.margin='8px 0 16px';
+    tip.innerHTML = `Mở <strong>?role=host</strong> cho giáo viên và <strong>?role=player</strong> cho sinh viên. <a style="color:#cfe0ff" href="${location.pathname}?role=host">Mở chế độ Host</a> · <a style="color:#cfe0ff" href="${location.pathname}?role=player">Mở chế độ Player</a>`;
+    document.querySelector('.wrap').insertBefore(tip, document.querySelector('.grid'));
+
     // ===== 2) HOST: vào phòng, tải cặp, bắt đầu ván =====
     $("enterRoom").onclick = async ()=>{
       const room = $("roomId").value.trim().toUpperCase(); if(!room) return alert('Nhập mã phòng');
@@ -199,8 +274,10 @@
         const meta=(await get(ref(db, `rooms/${joinedRoomId}/memory/meta`))).val()||{left:'--'}; $("memLeft").textContent=meta.left;
         board.innerHTML='';
         st.deck.forEach(card=>{
-          const btn=document.createElement('button'); btn.className='ans'; btn.style.height='72px';
+          const btn=document.createElement('button');
           const flipped=(st.flipped||[]).includes(card.id);
+          btn.className='ans ' + ((flipped||card.removed)?'revealed':'hidden');
+          btn.style.height='120px';
           btn.disabled=card.removed || st.lock;
           btn.textContent=(flipped||card.removed)? card.text : '❓';
           if(card.removed) btn.style.visibility='hidden';
